expected/main/gens/primStructSelect-neg-64.err
ERROR: "actual/main/gens/primStructSelect-neg-64.lc", line 9
external selectP1 {primStructSelect S    "p" SW} :: Ref S -> ProxyLab "p" -> Ref SW
         ^
No generated implementation: There is no "p" field in S

ERROR: Aborting after previously reported error

